setup/backstage/backstage.yaml
# kubernetes/backstage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
  namespace: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
    spec:
        imagePullSecrets:
        - name: regcred
        containers:
        - name: backstage
          image: tanuuidp/backstage:0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7007
---
# kubernetes/backstage-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage
  namespace: backstage
spec:
  selector:
    app: backstage
  ports:
    - name: http
      port: 80
      targetPort: http
