setup/backstage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: rancher
    cert-manager.io/issuer-kind: Issuer
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
  labels:
    app: backstage
  name: backstage
  namespace: backstage
spec:
  rules:
  - host: backstage.tanuu.fi
    http:
      paths:
      - backend:
          service:
            name: backstage
            port:
              number: 80
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - backstage.tanuu.fi
    secretName: tls-backstage-ingress
